# sessions-chronicle

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  meson.build  meson_options.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
brainstorming/: CONSOLIDATION_NOTE.md  DESIGN_SUMMARY.md  DEVELOPMENT_WORKFLOW.md  IMPLEMENTATION_GUIDE.md  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  RUST_ARCHITECTURE.md  SEARCH_ARCHITECTURE.md  SESSION_FORMAT_ANALYSIS.md  SESSION_RESUMPTION_AND_PREFERENCES.md  SESSION_RESUMPTION_IMPROVEMENTS.md  UI_DESIGN_COMPARISON.md
build-aux/: io.github.supermaciz.sessionschronicle.Devel.json  io.github.supermaciz.sessionschronicle.json
data/: io.github.supermaciz.sessionschronicle.desktop.in.in  io.github.supermaciz.sessionschronicle.gschema.xml.in  io.github.supermaciz.sessionschronicle.metainfo.xml.in.in
data/icons/: meson.build
data/resources/: resources.gresource.xml  style.css
docs/: DEVELOPMENT_WORKFLOW.md  GNOME_DESKTOP_INTEGRATION.md  OPENCODE_SUPPORT_PLAN.md  PROJECT_STATUS.md  README.md  SEARCH_ARCHITECTURE.md  SESSION_FORMAT_ANALYSIS.md  SESSION_RESUMPTION_IMPROVEMENTS.md  UI_DESIGN_COMPARISON.md
docs/issues/: multiple-highlight-query-clones.md
docs/plans/: 2026-01-26-opencode-parser-design.md  2026-01-26-opencode-parser-implementation.md  2026-01-27-lazy-collapsed-tool-output.md  2026-01-28-simplify-pr7-design.md  2026-01-30-markdown-rendering-design.md  (+13 more)
po/: POTFILES.in
src/: app.rs  config.rs  lib.rs  main.rs  session_sources.rs
src/database/: indexer.rs  (+2 more)
tests/: i18n_potfiles.rs  load_session.rs  message_preview.rs  opencode_search.rs  search_sessions.rs
(+43 files in other folders)
