[package]
name = "sessions-chronicle"
version = "0.1.0"
authors = ["Mathieu Cizo <maciz@outlook.fr>"]
edition = "2024"
publish = false
license = "MIT"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
relm4 = { version = "0.10.0", features = ["libadwaita", "gnome_48"] }
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_8"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
chrono = { version = "0.4.43", features = ["serde"] }
anyhow = "1.0.101"
thiserror = "2.0.18"
rusqlite = { version = "0.38.0", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
which = "8.0.0"
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }

[dev-dependencies]
tempfile = "3.24.0"
